--- a/assets/index.html
+++ b/assets/index.html
@@ -7,6 +7,7 @@
     <title>Start Page</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/general.css" />
+    <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./font-awesome-pro-v6-6/css/all.css" />
   </head>
   <body>
